/*
132_create_inspection_template_family.sql — Create inspection.InspectionTemplateFamily
Generated by: Quality Inspection Forms Module package
Notes:
- Idempotent (existence-guarded) migration
- Uses system-versioned temporal tables for auditable entities
*/
SET NOCOUNT ON;
GO


IF OBJECT_ID(N'inspection.InspectionTemplateFamily', N'U') IS NULL
BEGIN
    CREATE TABLE inspection.InspectionTemplateFamily (
        InspectionTemplateFamilyId INT IDENTITY(1,1) NOT NULL
            CONSTRAINT PK_InspectionTemplateFamily PRIMARY KEY CLUSTERED,
        PlantId INT NOT NULL
            CONSTRAINT FK_InspectionTemplateFamily_Plant REFERENCES dbo.Plant(PlantId),
        TemplateCode NVARCHAR(50) NOT NULL,
        TemplateName NVARCHAR(200) NOT NULL,
        TemplateTypeId INT NOT NULL
            CONSTRAINT FK_InspectionTemplateFamily_TemplateType REFERENCES dbo.LookupValue(LookupValueId),
        LineTypeId INT NULL
            CONSTRAINT FK_InspectionTemplateFamily_LineType REFERENCES dbo.LineType(LineTypeId),
        Description NVARCHAR(500) NULL,
        IsActive BIT NOT NULL
            CONSTRAINT DF_InspectionTemplateFamily_IsActive DEFAULT 1,

        CreatedBy INT NULL,
        CreatedDate DATETIME2(0) NOT NULL
            CONSTRAINT DF_InspectionTemplateFamily_CreatedDate DEFAULT SYSUTCDATETIME(),
        ModifiedBy INT NULL,
        ModifiedDate DATETIME2(0) NULL,

        ValidFrom DATETIME2(0) GENERATED ALWAYS AS ROW START HIDDEN NOT NULL
            CONSTRAINT DF_InspectionTemplateFamily_ValidFrom DEFAULT SYSUTCDATETIME(),
        ValidTo DATETIME2(0) GENERATED ALWAYS AS ROW END HIDDEN NOT NULL
            CONSTRAINT DF_InspectionTemplateFamily_ValidTo DEFAULT CONVERT(DATETIME2(0), '9999-12-31 23:59:59'),
        PERIOD FOR SYSTEM_TIME (ValidFrom, ValidTo),

        CONSTRAINT UQ_InspectionTemplateFamily_PlantId_TemplateCode UNIQUE (PlantId, TemplateCode)
    )
    WITH (SYSTEM_VERSIONING = ON (
        HISTORY_TABLE = audit.InspectionTemplateFamilyHistory,
        HISTORY_RETENTION_PERIOD = 7 YEARS
    ));

    CREATE INDEX IX_InspectionTemplateFamily_PlantId_TemplateTypeId
        ON inspection.InspectionTemplateFamily(PlantId, TemplateTypeId)
        INCLUDE (TemplateCode, TemplateName, LineTypeId, IsActive);
END
GO
