/*
134_create_inspection_template_section.sql — Create inspection.InspectionTemplateSection
Generated by: Quality Inspection Forms Module package
Notes:
- Idempotent (existence-guarded) migration
- Uses system-versioned temporal tables for auditable entities
*/
SET NOCOUNT ON;
GO


IF OBJECT_ID(N'inspection.InspectionTemplateSection', N'U') IS NULL
BEGIN
    CREATE TABLE inspection.InspectionTemplateSection (
        InspectionTemplateSectionId INT IDENTITY(1,1) NOT NULL
            CONSTRAINT PK_InspectionTemplateSection PRIMARY KEY CLUSTERED,
        InspectionTemplateId INT NOT NULL
            CONSTRAINT FK_InspectionTemplateSection_Template REFERENCES inspection.InspectionTemplate(InspectionTemplateId),
        PlantId INT NOT NULL
            CONSTRAINT FK_InspectionTemplateSection_Plant REFERENCES dbo.Plant(PlantId),

        SectionCode NVARCHAR(50) NOT NULL,
        SectionTitle NVARCHAR(200) NOT NULL,
        Description NVARCHAR(500) NULL,
        SortOrder INT NOT NULL
            CONSTRAINT DF_InspectionTemplateSection_SortOrder DEFAULT 0,
        IsActive BIT NOT NULL
            CONSTRAINT DF_InspectionTemplateSection_IsActive DEFAULT 1,

        CreatedBy INT NULL,
        CreatedDate DATETIME2(0) NOT NULL
            CONSTRAINT DF_InspectionTemplateSection_CreatedDate DEFAULT SYSUTCDATETIME(),
        ModifiedBy INT NULL,
        ModifiedDate DATETIME2(0) NULL,

        ValidFrom DATETIME2(0) GENERATED ALWAYS AS ROW START HIDDEN NOT NULL
            CONSTRAINT DF_InspectionTemplateSection_ValidFrom DEFAULT SYSUTCDATETIME(),
        ValidTo DATETIME2(0) GENERATED ALWAYS AS ROW END HIDDEN NOT NULL
            CONSTRAINT DF_InspectionTemplateSection_ValidTo DEFAULT CONVERT(DATETIME2(0), '9999-12-31 23:59:59'),
        PERIOD FOR SYSTEM_TIME (ValidFrom, ValidTo),

        CONSTRAINT UQ_InspectionTemplateSection_Template_SectionCode UNIQUE (InspectionTemplateId, SectionCode)
    )
    WITH (SYSTEM_VERSIONING = ON (
        HISTORY_TABLE = audit.InspectionTemplateSectionHistory,
        HISTORY_RETENTION_PERIOD = 7 YEARS
    ));

    CREATE INDEX IX_InspectionTemplateSection_TemplateId_SortOrder
        ON inspection.InspectionTemplateSection(InspectionTemplateId, SortOrder)
        INCLUDE (SectionCode, SectionTitle, IsActive);
END
GO
