/*
136_create_inspection_template_field_option.sql — Create inspection.InspectionTemplateFieldOption
Generated by: Quality Inspection Forms Module package
Notes:
- Idempotent (existence-guarded) migration
- Uses system-versioned temporal tables for auditable entities
*/
SET NOCOUNT ON;
GO


IF OBJECT_ID(N'inspection.InspectionTemplateFieldOption', N'U') IS NULL
BEGIN
    CREATE TABLE inspection.InspectionTemplateFieldOption (
        InspectionTemplateFieldOptionId INT IDENTITY(1,1) NOT NULL
            CONSTRAINT PK_InspectionTemplateFieldOption PRIMARY KEY CLUSTERED,
        InspectionTemplateFieldId INT NOT NULL
            CONSTRAINT FK_InspectionTemplateFieldOption_Field REFERENCES inspection.InspectionTemplateField(InspectionTemplateFieldId),
        PlantId INT NOT NULL
            CONSTRAINT FK_InspectionTemplateFieldOption_Plant REFERENCES dbo.Plant(PlantId),

        OptionCode NVARCHAR(50) NOT NULL,
        OptionLabel NVARCHAR(200) NOT NULL,
        SortOrder INT NOT NULL
            CONSTRAINT DF_InspectionTemplateFieldOption_SortOrder DEFAULT 0,
        IsActive BIT NOT NULL
            CONSTRAINT DF_InspectionTemplateFieldOption_IsActive DEFAULT 1,

        CreatedBy INT NULL,
        CreatedDate DATETIME2(0) NOT NULL
            CONSTRAINT DF_InspectionTemplateFieldOption_CreatedDate DEFAULT SYSUTCDATETIME(),
        ModifiedBy INT NULL,
        ModifiedDate DATETIME2(0) NULL,

        ValidFrom DATETIME2(0) GENERATED ALWAYS AS ROW START HIDDEN NOT NULL
            CONSTRAINT DF_InspectionTemplateFieldOption_ValidFrom DEFAULT SYSUTCDATETIME(),
        ValidTo DATETIME2(0) GENERATED ALWAYS AS ROW END HIDDEN NOT NULL
            CONSTRAINT DF_InspectionTemplateFieldOption_ValidTo DEFAULT CONVERT(DATETIME2(0), '9999-12-31 23:59:59'),
        PERIOD FOR SYSTEM_TIME (ValidFrom, ValidTo),

        CONSTRAINT UQ_InspectionTemplateFieldOption_Field_OptionCode UNIQUE (InspectionTemplateFieldId, OptionCode)
    )
    WITH (SYSTEM_VERSIONING = ON (
        HISTORY_TABLE = audit.InspectionTemplateFieldOptionHistory,
        HISTORY_RETENTION_PERIOD = 7 YEARS
    ));

    CREATE INDEX IX_InspectionTemplateFieldOption_FieldId_SortOrder
        ON inspection.InspectionTemplateFieldOption(InspectionTemplateFieldId, SortOrder)
        INCLUDE (OptionCode, OptionLabel, IsActive);
END
GO
