/*
138_create_inspection_criteria_numeric.sql — Create inspection.InspectionCriteriaNumeric
Generated by: Quality Inspection Forms Module package
Notes:
- Idempotent (existence-guarded) migration
- Uses system-versioned temporal tables for auditable entities
*/
SET NOCOUNT ON;
GO


IF OBJECT_ID(N'inspection.InspectionCriteriaNumeric', N'U') IS NULL
BEGIN
    CREATE TABLE inspection.InspectionCriteriaNumeric (
        InspectionTemplateFieldCriteriaId INT NOT NULL
            CONSTRAINT PK_InspectionCriteriaNumeric PRIMARY KEY CLUSTERED
            CONSTRAINT FK_InspectionCriteriaNumeric_Criteria REFERENCES inspection.InspectionTemplateFieldCriteria(InspectionTemplateFieldCriteriaId),
        PlantId INT NOT NULL
            CONSTRAINT FK_InspectionCriteriaNumeric_Plant REFERENCES dbo.Plant(PlantId),

        NominalValue DECIMAL(18,4) NULL,
        MinValue DECIMAL(18,4) NULL,
        MaxValue DECIMAL(18,4) NULL,
        LowerTolerance DECIMAL(18,4) NULL,
        UpperTolerance DECIMAL(18,4) NULL,

        WarningMinValue DECIMAL(18,4) NULL,
        WarningMaxValue DECIMAL(18,4) NULL,

        Units NVARCHAR(30) NULL,

        CreatedBy INT NULL,
        CreatedDate DATETIME2(0) NOT NULL
            CONSTRAINT DF_InspectionCriteriaNumeric_CreatedDate DEFAULT SYSUTCDATETIME(),
        ModifiedBy INT NULL,
        ModifiedDate DATETIME2(0) NULL,

        ValidFrom DATETIME2(0) GENERATED ALWAYS AS ROW START HIDDEN NOT NULL
            CONSTRAINT DF_InspectionCriteriaNumeric_ValidFrom DEFAULT SYSUTCDATETIME(),
        ValidTo DATETIME2(0) GENERATED ALWAYS AS ROW END HIDDEN NOT NULL
            CONSTRAINT DF_InspectionCriteriaNumeric_ValidTo DEFAULT CONVERT(DATETIME2(0), '9999-12-31 23:59:59'),
        PERIOD FOR SYSTEM_TIME (ValidFrom, ValidTo),

        CONSTRAINT CK_InspectionCriteriaNumeric_Range CHECK (
            (MinValue IS NULL OR MaxValue IS NULL OR MinValue <= MaxValue)
            AND (WarningMinValue IS NULL OR WarningMaxValue IS NULL OR WarningMinValue <= WarningMaxValue)
        )
    )
    WITH (SYSTEM_VERSIONING = ON (
        HISTORY_TABLE = audit.InspectionCriteriaNumericHistory,
        HISTORY_RETENTION_PERIOD = 7 YEARS
    ));
END
GO
