/*
139_create_inspection_criteria_attribute.sql — Create inspection.InspectionCriteriaAttribute
Generated by: Quality Inspection Forms Module package
Notes:
- Idempotent (existence-guarded) migration
- Uses system-versioned temporal tables for auditable entities
*/
SET NOCOUNT ON;
GO


IF OBJECT_ID(N'inspection.InspectionCriteriaAttribute', N'U') IS NULL
BEGIN
    CREATE TABLE inspection.InspectionCriteriaAttribute (
        InspectionTemplateFieldCriteriaId INT NOT NULL
            CONSTRAINT PK_InspectionCriteriaAttribute PRIMARY KEY CLUSTERED
            CONSTRAINT FK_InspectionCriteriaAttribute_Criteria REFERENCES inspection.InspectionTemplateFieldCriteria(InspectionTemplateFieldCriteriaId),
        PlantId INT NOT NULL
            CONSTRAINT FK_InspectionCriteriaAttribute_Plant REFERENCES dbo.Plant(PlantId),

        PassLabel NVARCHAR(50) NOT NULL
            CONSTRAINT DF_InspectionCriteriaAttribute_PassLabel DEFAULT N'Pass',
        FailLabel NVARCHAR(50) NOT NULL
            CONSTRAINT DF_InspectionCriteriaAttribute_FailLabel DEFAULT N'Fail',

        CreatedBy INT NULL,
        CreatedDate DATETIME2(0) NOT NULL
            CONSTRAINT DF_InspectionCriteriaAttribute_CreatedDate DEFAULT SYSUTCDATETIME(),
        ModifiedBy INT NULL,
        ModifiedDate DATETIME2(0) NULL,

        ValidFrom DATETIME2(0) GENERATED ALWAYS AS ROW START HIDDEN NOT NULL
            CONSTRAINT DF_InspectionCriteriaAttribute_ValidFrom DEFAULT SYSUTCDATETIME(),
        ValidTo DATETIME2(0) GENERATED ALWAYS AS ROW END HIDDEN NOT NULL
            CONSTRAINT DF_InspectionCriteriaAttribute_ValidTo DEFAULT CONVERT(DATETIME2(0), '9999-12-31 23:59:59'),
        PERIOD FOR SYSTEM_TIME (ValidFrom, ValidTo)
    )
    WITH (SYSTEM_VERSIONING = ON (
        HISTORY_TABLE = audit.InspectionCriteriaAttributeHistory,
        HISTORY_RETENTION_PERIOD = 7 YEARS
    ));
END
GO
