/*
140_create_inspection_criteria_selection.sql — Create inspection.InspectionCriteriaSelection
Generated by: Quality Inspection Forms Module package
Notes:
- Idempotent (existence-guarded) migration
- Uses system-versioned temporal tables for auditable entities
*/
SET NOCOUNT ON;
GO


IF OBJECT_ID(N'inspection.InspectionCriteriaSelection', N'U') IS NULL
BEGIN
    CREATE TABLE inspection.InspectionCriteriaSelection (
        InspectionTemplateFieldCriteriaId INT NOT NULL
            CONSTRAINT PK_InspectionCriteriaSelection PRIMARY KEY CLUSTERED
            CONSTRAINT FK_InspectionCriteriaSelection_Criteria REFERENCES inspection.InspectionTemplateFieldCriteria(InspectionTemplateFieldCriteriaId),
        PlantId INT NOT NULL
            CONSTRAINT FK_InspectionCriteriaSelection_Plant REFERENCES dbo.Plant(PlantId),

        IsMultiSelect BIT NOT NULL
            CONSTRAINT DF_InspectionCriteriaSelection_IsMultiSelect DEFAULT 0,
        MinSelections INT NULL,
        MaxSelections INT NULL,

        CreatedBy INT NULL,
        CreatedDate DATETIME2(0) NOT NULL
            CONSTRAINT DF_InspectionCriteriaSelection_CreatedDate DEFAULT SYSUTCDATETIME(),
        ModifiedBy INT NULL,
        ModifiedDate DATETIME2(0) NULL,

        ValidFrom DATETIME2(0) GENERATED ALWAYS AS ROW START HIDDEN NOT NULL
            CONSTRAINT DF_InspectionCriteriaSelection_ValidFrom DEFAULT SYSUTCDATETIME(),
        ValidTo DATETIME2(0) GENERATED ALWAYS AS ROW END HIDDEN NOT NULL
            CONSTRAINT DF_InspectionCriteriaSelection_ValidTo DEFAULT CONVERT(DATETIME2(0), '9999-12-31 23:59:59'),
        PERIOD FOR SYSTEM_TIME (ValidFrom, ValidTo),

        CONSTRAINT CK_InspectionCriteriaSelection_MinMax CHECK (
            (MinSelections IS NULL OR MinSelections >= 0)
            AND (MaxSelections IS NULL OR MaxSelections > 0)
            AND (MinSelections IS NULL OR MaxSelections IS NULL OR MinSelections <= MaxSelections)
        )
    )
    WITH (SYSTEM_VERSIONING = ON (
        HISTORY_TABLE = audit.InspectionCriteriaSelectionHistory,
        HISTORY_RETENTION_PERIOD = 7 YEARS
    ));
END
GO
