/*
141_create_inspection_criteria_allowed_option.sql — Create inspection.InspectionCriteriaAllowedOption
Generated by: Quality Inspection Forms Module package
Notes:
- Idempotent (existence-guarded) migration
- Uses system-versioned temporal tables for auditable entities
*/
SET NOCOUNT ON;
GO


IF OBJECT_ID(N'inspection.InspectionCriteriaAllowedOption', N'U') IS NULL
BEGIN
    CREATE TABLE inspection.InspectionCriteriaAllowedOption (
        InspectionCriteriaAllowedOptionId INT IDENTITY(1,1) NOT NULL
            CONSTRAINT PK_InspectionCriteriaAllowedOption PRIMARY KEY CLUSTERED,
        InspectionTemplateFieldCriteriaId INT NOT NULL
            CONSTRAINT FK_InspectionCriteriaAllowedOption_Criteria REFERENCES inspection.InspectionTemplateFieldCriteria(InspectionTemplateFieldCriteriaId),
        InspectionTemplateFieldOptionId INT NOT NULL
            CONSTRAINT FK_InspectionCriteriaAllowedOption_Option REFERENCES inspection.InspectionTemplateFieldOption(InspectionTemplateFieldOptionId),
        PlantId INT NOT NULL
            CONSTRAINT FK_InspectionCriteriaAllowedOption_Plant REFERENCES dbo.Plant(PlantId),

        IsFailOption BIT NOT NULL
            CONSTRAINT DF_InspectionCriteriaAllowedOption_IsFailOption DEFAULT 0,
        SortOrder INT NOT NULL
            CONSTRAINT DF_InspectionCriteriaAllowedOption_SortOrder DEFAULT 0,
        IsActive BIT NOT NULL
            CONSTRAINT DF_InspectionCriteriaAllowedOption_IsActive DEFAULT 1,

        CreatedBy INT NULL,
        CreatedDate DATETIME2(0) NOT NULL
            CONSTRAINT DF_InspectionCriteriaAllowedOption_CreatedDate DEFAULT SYSUTCDATETIME(),
        ModifiedBy INT NULL,
        ModifiedDate DATETIME2(0) NULL,

        ValidFrom DATETIME2(0) GENERATED ALWAYS AS ROW START HIDDEN NOT NULL
            CONSTRAINT DF_InspectionCriteriaAllowedOption_ValidFrom DEFAULT SYSUTCDATETIME(),
        ValidTo DATETIME2(0) GENERATED ALWAYS AS ROW END HIDDEN NOT NULL
            CONSTRAINT DF_InspectionCriteriaAllowedOption_ValidTo DEFAULT CONVERT(DATETIME2(0), '9999-12-31 23:59:59'),
        PERIOD FOR SYSTEM_TIME (ValidFrom, ValidTo),

        CONSTRAINT UQ_InspectionCriteriaAllowedOption_Criteria_Option UNIQUE
            (InspectionTemplateFieldCriteriaId, InspectionTemplateFieldOptionId)
    )
    WITH (SYSTEM_VERSIONING = ON (
        HISTORY_TABLE = audit.InspectionCriteriaAllowedOptionHistory,
        HISTORY_RETENTION_PERIOD = 7 YEARS
    ));

    CREATE INDEX IX_InspectionCriteriaAllowedOption_CriteriaId_SortOrder
        ON inspection.InspectionCriteriaAllowedOption(InspectionTemplateFieldCriteriaId, SortOrder)
        INCLUDE (InspectionTemplateFieldOptionId, IsFailOption, IsActive);
END
GO
