/*
142_create_inspection_criteria_text.sql — Create inspection.InspectionCriteriaText
Generated by: Quality Inspection Forms Module package
Notes:
- Idempotent (existence-guarded) migration
- Uses system-versioned temporal tables for auditable entities
*/
SET NOCOUNT ON;
GO


IF OBJECT_ID(N'inspection.InspectionCriteriaText', N'U') IS NULL
BEGIN
    CREATE TABLE inspection.InspectionCriteriaText (
        InspectionTemplateFieldCriteriaId INT NOT NULL
            CONSTRAINT PK_InspectionCriteriaText PRIMARY KEY CLUSTERED
            CONSTRAINT FK_InspectionCriteriaText_Criteria REFERENCES inspection.InspectionTemplateFieldCriteria(InspectionTemplateFieldCriteriaId),
        PlantId INT NOT NULL
            CONSTRAINT FK_InspectionCriteriaText_Plant REFERENCES dbo.Plant(PlantId),

        MinLength INT NULL,
        MaxLength INT NULL,
        RegexPattern NVARCHAR(200) NULL,
        RegexDescription NVARCHAR(200) NULL,

        CreatedBy INT NULL,
        CreatedDate DATETIME2(0) NOT NULL
            CONSTRAINT DF_InspectionCriteriaText_CreatedDate DEFAULT SYSUTCDATETIME(),
        ModifiedBy INT NULL,
        ModifiedDate DATETIME2(0) NULL,

        ValidFrom DATETIME2(0) GENERATED ALWAYS AS ROW START HIDDEN NOT NULL
            CONSTRAINT DF_InspectionCriteriaText_ValidFrom DEFAULT SYSUTCDATETIME(),
        ValidTo DATETIME2(0) GENERATED ALWAYS AS ROW END HIDDEN NOT NULL
            CONSTRAINT DF_InspectionCriteriaText_ValidTo DEFAULT CONVERT(DATETIME2(0), '9999-12-31 23:59:59'),
        PERIOD FOR SYSTEM_TIME (ValidFrom, ValidTo),

        CONSTRAINT CK_InspectionCriteriaText_MinMax CHECK (
            (MinLength IS NULL OR MinLength >= 0)
            AND (MaxLength IS NULL OR MaxLength > 0)
            AND (MinLength IS NULL OR MaxLength IS NULL OR MinLength <= MaxLength)
        )
    )
    WITH (SYSTEM_VERSIONING = ON (
        HISTORY_TABLE = audit.InspectionCriteriaTextHistory,
        HISTORY_RETENTION_PERIOD = 7 YEARS
    ));
END
GO
