/*
149_create_inspection_response_numeric.sql — Create inspection.InspectionResponseNumeric
Generated by: Quality Inspection Forms Module package
Notes:
- Idempotent (existence-guarded) migration
- Uses system-versioned temporal tables for auditable entities
*/
SET NOCOUNT ON;
GO


IF OBJECT_ID(N'inspection.InspectionResponseNumeric', N'U') IS NULL
BEGIN
    CREATE TABLE inspection.InspectionResponseNumeric (
        InspectionResponseNumericId INT IDENTITY(1,1) NOT NULL
            CONSTRAINT PK_InspectionResponseNumeric PRIMARY KEY CLUSTERED,
        PlantId INT NOT NULL
            CONSTRAINT FK_InspectionResponseNumeric_Plant REFERENCES dbo.Plant(PlantId),

        InspectionId INT NOT NULL
            CONSTRAINT FK_InspectionResponseNumeric_Inspection REFERENCES inspection.Inspection(InspectionId),
        InspectionTemplateFieldId INT NOT NULL
            CONSTRAINT FK_InspectionResponseNumeric_Field REFERENCES inspection.InspectionTemplateField(InspectionTemplateFieldId),

        MeasuredValue DECIMAL(18,4) NOT NULL,
        Units NVARCHAR(30) NULL,

        AttemptNumber TINYINT NOT NULL
            CONSTRAINT DF_InspectionResponseNumeric_AttemptNumber DEFAULT 1,
        IsRemeasure BIT NOT NULL
            CONSTRAINT DF_InspectionResponseNumeric_IsRemeasure DEFAULT 0,

        CapturedAtUtc DATETIME2(0) NOT NULL
            CONSTRAINT DF_InspectionResponseNumeric_CapturedAtUtc DEFAULT SYSUTCDATETIME(),

        CreatedBy INT NULL,
        CreatedDate DATETIME2(0) NOT NULL
            CONSTRAINT DF_InspectionResponseNumeric_CreatedDate DEFAULT SYSUTCDATETIME(),
        ModifiedBy INT NULL,
        ModifiedDate DATETIME2(0) NULL,

        ValidFrom DATETIME2(0) GENERATED ALWAYS AS ROW START HIDDEN NOT NULL
            CONSTRAINT DF_InspectionResponseNumeric_ValidFrom DEFAULT SYSUTCDATETIME(),
        ValidTo DATETIME2(0) GENERATED ALWAYS AS ROW END HIDDEN NOT NULL
            CONSTRAINT DF_InspectionResponseNumeric_ValidTo DEFAULT CONVERT(DATETIME2(0), '9999-12-31 23:59:59'),
        PERIOD FOR SYSTEM_TIME (ValidFrom, ValidTo)
    )
    WITH (SYSTEM_VERSIONING = ON (
        HISTORY_TABLE = audit.InspectionResponseNumericHistory,
        HISTORY_RETENTION_PERIOD = 7 YEARS
    ));

    CREATE UNIQUE INDEX UX_InspectionResponseNumeric_Inspection_Field_Attempt
        ON inspection.InspectionResponseNumeric(InspectionId, InspectionTemplateFieldId, AttemptNumber);

    CREATE INDEX IX_InspectionResponseNumeric_PlantId_Field_CapturedAtUtc
        ON inspection.InspectionResponseNumeric(PlantId, InspectionTemplateFieldId, CapturedAtUtc DESC)
        INCLUDE (InspectionId, MeasuredValue, Units, AttemptNumber);
END
GO
