/*
150_create_inspection_response_attribute.sql — Create inspection.InspectionResponseAttribute
Generated by: Quality Inspection Forms Module package
Notes:
- Idempotent (existence-guarded) migration
- Uses system-versioned temporal tables for auditable entities
*/
SET NOCOUNT ON;
GO


IF OBJECT_ID(N'inspection.InspectionResponseAttribute', N'U') IS NULL
BEGIN
    CREATE TABLE inspection.InspectionResponseAttribute (
        InspectionResponseAttributeId INT IDENTITY(1,1) NOT NULL
            CONSTRAINT PK_InspectionResponseAttribute PRIMARY KEY CLUSTERED,
        PlantId INT NOT NULL
            CONSTRAINT FK_InspectionResponseAttribute_Plant REFERENCES dbo.Plant(PlantId),

        InspectionId INT NOT NULL
            CONSTRAINT FK_InspectionResponseAttribute_Inspection REFERENCES inspection.Inspection(InspectionId),
        InspectionTemplateFieldId INT NOT NULL
            CONSTRAINT FK_InspectionResponseAttribute_Field REFERENCES inspection.InspectionTemplateField(InspectionTemplateFieldId),

        AttributePass BIT NOT NULL,

        CapturedAtUtc DATETIME2(0) NOT NULL
            CONSTRAINT DF_InspectionResponseAttribute_CapturedAtUtc DEFAULT SYSUTCDATETIME(),

        CreatedBy INT NULL,
        CreatedDate DATETIME2(0) NOT NULL
            CONSTRAINT DF_InspectionResponseAttribute_CreatedDate DEFAULT SYSUTCDATETIME(),
        ModifiedBy INT NULL,
        ModifiedDate DATETIME2(0) NULL,

        ValidFrom DATETIME2(0) GENERATED ALWAYS AS ROW START HIDDEN NOT NULL
            CONSTRAINT DF_InspectionResponseAttribute_ValidFrom DEFAULT SYSUTCDATETIME(),
        ValidTo DATETIME2(0) GENERATED ALWAYS AS ROW END HIDDEN NOT NULL
            CONSTRAINT DF_InspectionResponseAttribute_ValidTo DEFAULT CONVERT(DATETIME2(0), '9999-12-31 23:59:59'),
        PERIOD FOR SYSTEM_TIME (ValidFrom, ValidTo)
    )
    WITH (SYSTEM_VERSIONING = ON (
        HISTORY_TABLE = audit.InspectionResponseAttributeHistory,
        HISTORY_RETENTION_PERIOD = 7 YEARS
    ));

    CREATE UNIQUE INDEX UX_InspectionResponseAttribute_Inspection_Field
        ON inspection.InspectionResponseAttribute(InspectionId, InspectionTemplateFieldId);

    CREATE INDEX IX_InspectionResponseAttribute_PlantId_Field_CapturedAtUtc
        ON inspection.InspectionResponseAttribute(PlantId, InspectionTemplateFieldId, CapturedAtUtc DESC)
        INCLUDE (InspectionId, AttributePass);
END
GO
