/*
151_create_inspection_response_text.sql — Create inspection.InspectionResponseText
Generated by: Quality Inspection Forms Module package
Notes:
- Idempotent (existence-guarded) migration
- Uses system-versioned temporal tables for auditable entities
*/
SET NOCOUNT ON;
GO


IF OBJECT_ID(N'inspection.InspectionResponseText', N'U') IS NULL
BEGIN
    CREATE TABLE inspection.InspectionResponseText (
        InspectionResponseTextId INT IDENTITY(1,1) NOT NULL
            CONSTRAINT PK_InspectionResponseText PRIMARY KEY CLUSTERED,
        PlantId INT NOT NULL
            CONSTRAINT FK_InspectionResponseText_Plant REFERENCES dbo.Plant(PlantId),

        InspectionId INT NOT NULL
            CONSTRAINT FK_InspectionResponseText_Inspection REFERENCES inspection.Inspection(InspectionId),
        InspectionTemplateFieldId INT NOT NULL
            CONSTRAINT FK_InspectionResponseText_Field REFERENCES inspection.InspectionTemplateField(InspectionTemplateFieldId),

        TextValue NVARCHAR(2000) NOT NULL,

        CapturedAtUtc DATETIME2(0) NOT NULL
            CONSTRAINT DF_InspectionResponseText_CapturedAtUtc DEFAULT SYSUTCDATETIME(),

        CreatedBy INT NULL,
        CreatedDate DATETIME2(0) NOT NULL
            CONSTRAINT DF_InspectionResponseText_CreatedDate DEFAULT SYSUTCDATETIME(),
        ModifiedBy INT NULL,
        ModifiedDate DATETIME2(0) NULL,

        ValidFrom DATETIME2(0) GENERATED ALWAYS AS ROW START HIDDEN NOT NULL
            CONSTRAINT DF_InspectionResponseText_ValidFrom DEFAULT SYSUTCDATETIME(),
        ValidTo DATETIME2(0) GENERATED ALWAYS AS ROW END HIDDEN NOT NULL
            CONSTRAINT DF_InspectionResponseText_ValidTo DEFAULT CONVERT(DATETIME2(0), '9999-12-31 23:59:59'),
        PERIOD FOR SYSTEM_TIME (ValidFrom, ValidTo)
    )
    WITH (SYSTEM_VERSIONING = ON (
        HISTORY_TABLE = audit.InspectionResponseTextHistory,
        HISTORY_RETENTION_PERIOD = 7 YEARS
    ));

    CREATE UNIQUE INDEX UX_InspectionResponseText_Inspection_Field
        ON inspection.InspectionResponseText(InspectionId, InspectionTemplateFieldId);

    CREATE INDEX IX_InspectionResponseText_PlantId_Field_CapturedAtUtc
        ON inspection.InspectionResponseText(PlantId, InspectionTemplateFieldId, CapturedAtUtc DESC)
        INCLUDE (InspectionId);
END
GO
