/*
152_create_inspection_response_datetime.sql — Create inspection.InspectionResponseDateTime
Generated by: Quality Inspection Forms Module package
Notes:
- Idempotent (existence-guarded) migration
- Uses system-versioned temporal tables for auditable entities
*/
SET NOCOUNT ON;
GO


IF OBJECT_ID(N'inspection.InspectionResponseDateTime', N'U') IS NULL
BEGIN
    CREATE TABLE inspection.InspectionResponseDateTime (
        InspectionResponseDateTimeId INT IDENTITY(1,1) NOT NULL
            CONSTRAINT PK_InspectionResponseDateTime PRIMARY KEY CLUSTERED,
        PlantId INT NOT NULL
            CONSTRAINT FK_InspectionResponseDateTime_Plant REFERENCES dbo.Plant(PlantId),

        InspectionId INT NOT NULL
            CONSTRAINT FK_InspectionResponseDateTime_Inspection REFERENCES inspection.Inspection(InspectionId),
        InspectionTemplateFieldId INT NOT NULL
            CONSTRAINT FK_InspectionResponseDateTime_Field REFERENCES inspection.InspectionTemplateField(InspectionTemplateFieldId),

        DateTimeValue DATETIME2(0) NOT NULL,

        CapturedAtUtc DATETIME2(0) NOT NULL
            CONSTRAINT DF_InspectionResponseDateTime_CapturedAtUtc DEFAULT SYSUTCDATETIME(),

        CreatedBy INT NULL,
        CreatedDate DATETIME2(0) NOT NULL
            CONSTRAINT DF_InspectionResponseDateTime_CreatedDate DEFAULT SYSUTCDATETIME(),
        ModifiedBy INT NULL,
        ModifiedDate DATETIME2(0) NULL,

        ValidFrom DATETIME2(0) GENERATED ALWAYS AS ROW START HIDDEN NOT NULL
            CONSTRAINT DF_InspectionResponseDateTime_ValidFrom DEFAULT SYSUTCDATETIME(),
        ValidTo DATETIME2(0) GENERATED ALWAYS AS ROW END HIDDEN NOT NULL
            CONSTRAINT DF_InspectionResponseDateTime_ValidTo DEFAULT CONVERT(DATETIME2(0), '9999-12-31 23:59:59'),
        PERIOD FOR SYSTEM_TIME (ValidFrom, ValidTo)
    )
    WITH (SYSTEM_VERSIONING = ON (
        HISTORY_TABLE = audit.InspectionResponseDateTimeHistory,
        HISTORY_RETENTION_PERIOD = 7 YEARS
    ));

    CREATE UNIQUE INDEX UX_InspectionResponseDateTime_Inspection_Field
        ON inspection.InspectionResponseDateTime(InspectionId, InspectionTemplateFieldId);

    CREATE INDEX IX_InspectionResponseDateTime_PlantId_Field_CapturedAtUtc
        ON inspection.InspectionResponseDateTime(PlantId, InspectionTemplateFieldId, CapturedAtUtc DESC)
        INCLUDE (InspectionId, DateTimeValue);
END
GO
