/*
153_create_inspection_response_selection.sql — Create inspection.InspectionResponseSelection
Generated by: Quality Inspection Forms Module package
Notes:
- Idempotent (existence-guarded) migration
- Uses system-versioned temporal tables for auditable entities
*/
SET NOCOUNT ON;
GO


IF OBJECT_ID(N'inspection.InspectionResponseSelection', N'U') IS NULL
BEGIN
    CREATE TABLE inspection.InspectionResponseSelection (
        InspectionResponseSelectionId INT IDENTITY(1,1) NOT NULL
            CONSTRAINT PK_InspectionResponseSelection PRIMARY KEY CLUSTERED,
        PlantId INT NOT NULL
            CONSTRAINT FK_InspectionResponseSelection_Plant REFERENCES dbo.Plant(PlantId),

        InspectionId INT NOT NULL
            CONSTRAINT FK_InspectionResponseSelection_Inspection REFERENCES inspection.Inspection(InspectionId),
        InspectionTemplateFieldId INT NOT NULL
            CONSTRAINT FK_InspectionResponseSelection_Field REFERENCES inspection.InspectionTemplateField(InspectionTemplateFieldId),
        InspectionTemplateFieldOptionId INT NOT NULL
            CONSTRAINT FK_InspectionResponseSelection_Option REFERENCES inspection.InspectionTemplateFieldOption(InspectionTemplateFieldOptionId),

        CapturedAtUtc DATETIME2(0) NOT NULL
            CONSTRAINT DF_InspectionResponseSelection_CapturedAtUtc DEFAULT SYSUTCDATETIME(),

        CreatedBy INT NULL,
        CreatedDate DATETIME2(0) NOT NULL
            CONSTRAINT DF_InspectionResponseSelection_CreatedDate DEFAULT SYSUTCDATETIME(),
        ModifiedBy INT NULL,
        ModifiedDate DATETIME2(0) NULL,

        ValidFrom DATETIME2(0) GENERATED ALWAYS AS ROW START HIDDEN NOT NULL
            CONSTRAINT DF_InspectionResponseSelection_ValidFrom DEFAULT SYSUTCDATETIME(),
        ValidTo DATETIME2(0) GENERATED ALWAYS AS ROW END HIDDEN NOT NULL
            CONSTRAINT DF_InspectionResponseSelection_ValidTo DEFAULT CONVERT(DATETIME2(0), '9999-12-31 23:59:59'),
        PERIOD FOR SYSTEM_TIME (ValidFrom, ValidTo),

        CONSTRAINT UQ_InspectionResponseSelection_Inspection_Field_Option UNIQUE
            (InspectionId, InspectionTemplateFieldId, InspectionTemplateFieldOptionId)
    )
    WITH (SYSTEM_VERSIONING = ON (
        HISTORY_TABLE = audit.InspectionResponseSelectionHistory,
        HISTORY_RETENTION_PERIOD = 7 YEARS
    ));

    CREATE INDEX IX_InspectionResponseSelection_InspectionId
        ON inspection.InspectionResponseSelection(InspectionId)
        INCLUDE (InspectionTemplateFieldId, InspectionTemplateFieldOptionId, CapturedAtUtc);

    CREATE INDEX IX_InspectionResponseSelection_PlantId_Field_CapturedAtUtc
        ON inspection.InspectionResponseSelection(PlantId, InspectionTemplateFieldId, CapturedAtUtc DESC)
        INCLUDE (InspectionId, InspectionTemplateFieldOptionId);
END
GO
