/*
154_create_inspection_response_attachment.sql — Create inspection.InspectionResponseAttachment
Generated by: Quality Inspection Forms Module package
Notes:
- Idempotent (existence-guarded) migration
- Uses system-versioned temporal tables for auditable entities
*/
SET NOCOUNT ON;
GO


IF OBJECT_ID(N'inspection.InspectionResponseAttachment', N'U') IS NULL
BEGIN
    CREATE TABLE inspection.InspectionResponseAttachment (
        InspectionResponseAttachmentId INT IDENTITY(1,1) NOT NULL
            CONSTRAINT PK_InspectionResponseAttachment PRIMARY KEY CLUSTERED,
        PlantId INT NOT NULL
            CONSTRAINT FK_InspectionResponseAttachment_Plant REFERENCES dbo.Plant(PlantId),

        InspectionId INT NOT NULL
            CONSTRAINT FK_InspectionResponseAttachment_Inspection REFERENCES inspection.Inspection(InspectionId),
        InspectionTemplateFieldId INT NOT NULL
            CONSTRAINT FK_InspectionResponseAttachment_Field REFERENCES inspection.InspectionTemplateField(InspectionTemplateFieldId),

        DocumentId INT NOT NULL
            CONSTRAINT FK_InspectionResponseAttachment_Document REFERENCES dbo.Document(DocumentId),

        Caption NVARCHAR(200) NULL,

        CapturedAtUtc DATETIME2(0) NOT NULL
            CONSTRAINT DF_InspectionResponseAttachment_CapturedAtUtc DEFAULT SYSUTCDATETIME(),

        CreatedBy INT NULL,
        CreatedDate DATETIME2(0) NOT NULL
            CONSTRAINT DF_InspectionResponseAttachment_CreatedDate DEFAULT SYSUTCDATETIME(),
        ModifiedBy INT NULL,
        ModifiedDate DATETIME2(0) NULL,

        ValidFrom DATETIME2(0) GENERATED ALWAYS AS ROW START HIDDEN NOT NULL
            CONSTRAINT DF_InspectionResponseAttachment_ValidFrom DEFAULT SYSUTCDATETIME(),
        ValidTo DATETIME2(0) GENERATED ALWAYS AS ROW END HIDDEN NOT NULL
            CONSTRAINT DF_InspectionResponseAttachment_ValidTo DEFAULT CONVERT(DATETIME2(0), '9999-12-31 23:59:59'),
        PERIOD FOR SYSTEM_TIME (ValidFrom, ValidTo),

        CONSTRAINT UQ_InspectionResponseAttachment_Inspection_Field_Document UNIQUE
            (InspectionId, InspectionTemplateFieldId, DocumentId)
    )
    WITH (SYSTEM_VERSIONING = ON (
        HISTORY_TABLE = audit.InspectionResponseAttachmentHistory,
        HISTORY_RETENTION_PERIOD = 7 YEARS
    ));

    CREATE INDEX IX_InspectionResponseAttachment_DocumentId
        ON inspection.InspectionResponseAttachment(DocumentId)
        INCLUDE (InspectionId, PlantId, InspectionTemplateFieldId, CapturedAtUtc);
END
GO
